--- a/style.css
+++ b/style.css
@@ -5,11 +5,37 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     background-color: grey;
 }
 
+header {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    height: 20vh;
+    background-color: rgba(0, 100, 0, 0.5);
+
+}
 main {
     width: 50%;
-    height: 100vh;
+    height: 60vh;
     background-color: rgba(0, 100, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    width: 50%;
+    height: 20vh;
+    background-color: rgba(0, 100, 0, 0.3);
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 500px) {
+    * {
+        background-color: sandybrown;
+    }
 }
